--- a/style/style.css
+++ b/style/style.css
@@ -25,6 +25,8 @@ body {
   color: white;
   margin-top: 30px;
   position: fixed;
+  top: 0;
+  left: 0;
   width: 20%;
   max-width: 100px;
   min-width: 70px;
